fix height cap in contact window
contact window now doesn't let user resize if it cuts off content. additionally, scrollbar is hidden.

--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ html {
 /* Contact icon styles */
 .window-body-contact {
     display: flex;
-    overflow: auto;
+    /* overflow: auto; */
     padding: 12px 16px;
     background: #f0f0f0;
     flex-direction: row;
